// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ObojoboDraft.Chunks.MCAssessment mc-assessment-results type=default, score=0, isTypePickAll=false, isForScreenReader=false 1`] = `
<div
  aria-hidden="true"
  className="result-container"
>
  <p
    className="result incorrect"
  >
    mock-incorrect-label
  </p>
</div>
`;

exports[`ObojoboDraft.Chunks.MCAssessment mc-assessment-results type=default, score=0, isTypePickAll=false, isForScreenReader=true 1`] = `
<div
  className="result-container"
>
  <p
    className="result incorrect"
  >
    mock-incorrect-label - You received a 0% on this question.
  </p>
</div>
`;

exports[`ObojoboDraft.Chunks.MCAssessment mc-assessment-results type=default, score=0, isTypePickAll=true, isForScreenReader=false 1`] = `
<div
  aria-hidden="true"
  className="result-container"
>
  <p
    className="result incorrect"
  >
    mock-incorrect-label
  </p>
  <span
    className="pick-all-instructions"
  />
</div>
`;

exports[`ObojoboDraft.Chunks.MCAssessment mc-assessment-results type=default, score=0, isTypePickAll=true, isForScreenReader=true 1`] = `
<div
  className="result-container"
>
  <p
    className="result incorrect"
  >
    mock-incorrect-label - You received a 0% on this question.
  </p>
  <span
    className="pick-all-instructions"
  />
</div>
`;

exports[`ObojoboDraft.Chunks.MCAssessment mc-assessment-results type=default, score=100, isTypePickAll=false, isForScreenReader=false 1`] = `
<div
  aria-hidden="true"
  className="result-container"
>
  <p
    className="result correct"
  >
    mock-correct-label
  </p>
</div>
`;

exports[`ObojoboDraft.Chunks.MCAssessment mc-assessment-results type=default, score=100, isTypePickAll=false, isForScreenReader=true 1`] = `
<div
  className="result-container"
>
  <p
    className="result correct"
  >
    mock-correct-label - You received a 100% on this question.
  </p>
</div>
`;

exports[`ObojoboDraft.Chunks.MCAssessment mc-assessment-results type=default, score=100, isTypePickAll=true, isForScreenReader=false 1`] = `
<div
  aria-hidden="true"
  className="result-container"
>
  <p
    className="result correct"
  >
    mock-correct-label
  </p>
</div>
`;

exports[`ObojoboDraft.Chunks.MCAssessment mc-assessment-results type=default, score=100, isTypePickAll=true, isForScreenReader=true 1`] = `
<div
  className="result-container"
>
  <p
    className="result correct"
  >
    mock-correct-label - You received a 100% on this question.
  </p>
</div>
`;

exports[`ObojoboDraft.Chunks.MCAssessment mc-assessment-results type=survey, score=0, isTypePickAll=false, isForScreenReader=false 1`] = `
<div
  className="result-container"
>
  <p
    className="result survey"
  >
    mock-correct-label
  </p>
</div>
`;

exports[`ObojoboDraft.Chunks.MCAssessment mc-assessment-results type=survey, score=0, isTypePickAll=false, isForScreenReader=true 1`] = `
<div
  className="result-container"
>
  <p
    className="result survey"
  >
    mock-correct-label
  </p>
</div>
`;

exports[`ObojoboDraft.Chunks.MCAssessment mc-assessment-results type=survey, score=0, isTypePickAll=true, isForScreenReader=false 1`] = `
<div
  className="result-container"
>
  <p
    className="result survey"
  >
    mock-correct-label
  </p>
</div>
`;

exports[`ObojoboDraft.Chunks.MCAssessment mc-assessment-results type=survey, score=0, isTypePickAll=true, isForScreenReader=true 1`] = `
<div
  className="result-container"
>
  <p
    className="result survey"
  >
    mock-correct-label
  </p>
</div>
`;

exports[`ObojoboDraft.Chunks.MCAssessment mc-assessment-results type=survey, score=100, isTypePickAll=false, isForScreenReader=false 1`] = `
<div
  className="result-container"
>
  <p
    className="result survey"
  >
    mock-correct-label
  </p>
</div>
`;

exports[`ObojoboDraft.Chunks.MCAssessment mc-assessment-results type=survey, score=100, isTypePickAll=false, isForScreenReader=true 1`] = `
<div
  className="result-container"
>
  <p
    className="result survey"
  >
    mock-correct-label
  </p>
</div>
`;

exports[`ObojoboDraft.Chunks.MCAssessment mc-assessment-results type=survey, score=100, isTypePickAll=true, isForScreenReader=false 1`] = `
<div
  className="result-container"
>
  <p
    className="result survey"
  >
    mock-correct-label
  </p>
</div>
`;

exports[`ObojoboDraft.Chunks.MCAssessment mc-assessment-results type=survey, score=100, isTypePickAll=true, isForScreenReader=true 1`] = `
<div
  className="result-container"
>
  <p
    className="result survey"
  >
    mock-correct-label
  </p>
</div>
`;
